// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Breadcrumb component should render breadcrumb with aria-label 1`] = `
.pf-c-breadcrumb__list {
  display: flex;
  flex-wrap: wrap;
  align-items: center;
}
.pf-c-breadcrumb {
  display: inline-flex;
}

<nav
  aria-label="custom label"
  className="pf-c-breadcrumb"
>
  <ol
    className="pf-c-breadcrumb__list"
  />
</nav>
`;

exports[`Breadcrumb component should render breadcrumb with children 1`] = `
.pf-c-breadcrumb__list {
  display: flex;
  flex-wrap: wrap;
  align-items: center;
}
.pf-c-breadcrumb {
  display: inline-flex;
}

<nav
  aria-label="breadcrumb"
  className="pf-c-breadcrumb"
>
  <ol
    className="pf-c-breadcrumb__list"
  >
    <BreadcrumbItem
      className=""
      component="a"
      isActive={false}
      target={null}
      to="#"
    >
      Item 1
    </BreadcrumbItem>
     
    <BreadcrumbItem
      className=""
      component="a"
      isActive={false}
      target={null}
      to="#"
    >
      Item 1
    </BreadcrumbItem>
  </ol>
</nav>
`;

exports[`Breadcrumb component should render breadcrumb with className 1`] = `
.pf-c-breadcrumb__list {
  display: flex;
  flex-wrap: wrap;
  align-items: center;
}
.pf-c-breadcrumb.className {
  display: inline-flex;
}

<nav
  aria-label="breadcrumb"
  className="pf-c-breadcrumb className"
>
  <ol
    className="pf-c-breadcrumb__list"
  />
</nav>
`;

exports[`Breadcrumb component should render default breadcrumb 1`] = `
.pf-c-breadcrumb__list {
  display: flex;
  flex-wrap: wrap;
  align-items: center;
}
.pf-c-breadcrumb {
  display: inline-flex;
}

<nav
  aria-label="breadcrumb"
  className="pf-c-breadcrumb"
>
  <ol
    className="pf-c-breadcrumb__list"
  />
</nav>
`;
